@@ -1,3 +1,9 @@
+2000-04-13  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>
+
+	* 10724: Src/Zle/compresult.c, Src/Zle/zle_tricky.c: display
+ 	number of matches again when asking if a completion list should be
+ 	shown (only when not zero)
+	
 2000-04-12  Bart Schaefer  <schaefer@brasslantern.com>
 
 	* 10706: Andrej: Completion/User/_man: Fix quoting in awk args.
